Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -66,13 +66,11 @@ taken by a vastly inferior library).</p>
 
 <p>or you can simply include the file in your browser like so:</p>
 
-<pre><code>&lt;script type="text/javascript" src="/path/to/lodash.js"&gt;&lt;/script&gt;
-&lt;script type="text/javascript" src="/path/to/console.image.js"&gt;&lt;/script&gt;
+<pre><code>&lt;script type="text/javascript" src="/path/to/console.image.js"&gt;&lt;/script&gt;
 &lt;script type="text/javascript" src="/path/to/Clog.js"&gt;&lt;/script&gt;
 </code></pre>
 
-<p><a href="http://lodash.com/">Lodash</a> is required for Clog to work in the browser. 
-<a href="https://github.com/adriancooney/console.image">Console.image</a> is not
+<p><a href="https://github.com/adriancooney/console.image">Console.image</a> is not
 required, but is STRONGLY recommend to receive fun and profit.</p>
 
 <hr><h2>
